[metadata]
name = mite-demo
version = 0.0.1
description = demo repository for mite

[options]
packages = find_namespace:
install_requires =
    mite-sky
    flask
    black
    flake8
package_dir =
    =src

[options.entry_points]
console_scripts =
    mockserver = mockserver.__init__:main

[options.packages.find]
where = src

zip_safe = no
