[metadata]
name = mite-demo
version = 0.0.1
description = demo repository for mite

[options]
packages = find_namespace:
install_requires =
    mite
    flask==2.0.3  # Loads of "Unsupported protocol" errors on 2.1.0
    werkzeug==2.0.3
    black
    flake8
    psutil
    docopt
package_dir =
    =src

[options.entry_points]
console_scripts =
    mockserver = mockserver.__main__:main

[options.packages.find]
where = src

zip_safe = no
